# automata

./: Cargo.toml  README.md
src/: automata.rs  conversionutil.rs  fsutil.rs  main.rs  mathutils.rs  sessionmgr.rs  suggestions.rs  sysaction.rs  sysinfo.rs
src/component/: mod.rs
src/component/suggestion_row/: imp.rs  mod.rs  template.ui
