[package]
name = "automata"
version = "0.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
derivative = "2.2.0"
evalexpr = "13.1.0"
freedesktop-desktop-entry = "0.7.19"
gtk4 = "0.10.1"
logind-zbus = "5.3.2"
rust-ini = "0.21.3"
wl-clipboard-rs = "0.9.2"
xdg-utils = "0.4.0"
zbus = { version = "5.7.0", default-features = false }

