[package]
name = "automata"
version = "0.0.5"
edition = "2024"

[dependencies]
base64 = "0.22.1"
derivative = "2.2.0"
evalexpr = "13.1.0"
freedesktop-desktop-entry = "0.7.19"
gtk4 = "0.10.1"
logind-zbus = "5.3.2"
regex = "1.12.2"
rust-ini = "0.21.3"
unit-conversions = "0.1.16"
wl-clipboard-rs = "0.9.2"
xdg-utils = "0.4.0"
zbus = { version = "5.7.0", default-features = false }

[package.metadata.deb]
maintainer = "Luiz Gustavo <luizgfc@proton.me>"
copyright = "2025, Luiz Gustavo <luizgfc@proton.me>"
# license-file = ["LICENSE", "4"]
extended-description = """\
Productivity toolset for Linux"""
# depends = "$auto"
section = "utility"
priority = "optional"
# assets = [
#     # target/release path is special, and gets replaced by cargo-deb with the actual target dir path.
#     ["target/release/cargo-deb", "usr/bin/", "755"],
#     # both array and object syntaxes are equivalent:
#     { source = "README.md", dest = "usr/share/doc/cargo-deb/README", mode = "644"},
# ]
